[workspace]
reesolver = "2"
members = ["generate-ast"]

[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rlox"
path = "src/main.rs"


[workspace.package]

edition = "2021"
authors = ["Álex Pérez <me@alejandroperez.dev>"]
description = "RLox is an interpreter for the Lox programming language. The language was designed by Robert Nystrom "
readme = "./README.md"
repository = "https://github.com/73Nko/rlox"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generate_ast = {path = "./generate-ast"}